--- a/OrderProcessingWorkflow/OrderProcessingWorkflow/Views/Home/Index.cshtml
+++ b/OrderProcessingWorkflow/OrderProcessingWorkflow/Views/Home/Index.cshtml
@@ -2,30 +2,42 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+    <div class="jumbotron">
+        <h1>Order Processing Workflow</h1>
+        <form id="payment-form">
+            <div class="col-6">
+                <label for="payment-type">Payment Type</label>
+                @Html.DropDownList("Payment Type", new SelectList(ViewBag.ProductList, "ProductID", "ProductName"), new { id = "payment-type", @class = "form-control" })
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+            </div>
+            <div class="col-6">
+                <input type="submit" class="btn btn-primary" value="Make Payment" />
+            </div>
+        </form>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+
+<div class="row" id="payment-process-status">
+    
 </div>
+<script type="text/javascript">
+    $(function () {
+        $('#payment-form').submit(function () {
+            var paymentType = $('#payment-type').val();
+            $.ajax({
+                url: "/Home/ProcessPayment?paymentType=" + paymentType,
+                type: "GET",
+                success: function (result) {
+                    if (result != null) {
+                        for (var i = 0; i < result.length; i++) {
+                            $('#payment-process-status').html('<p class="text-success">'+result.text+'</p>')
+                        }
+                    }
+                },
+                error: {
+
+                }
+            });
+        });
+    });
+</script>
+
