--- a/OrderProcessingWorkflow/OrderProcessingWorkflow/Views/Home/Index.cshtml
+++ b/OrderProcessingWorkflow/OrderProcessingWorkflow/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
                 success: function (result) {
                     console.log(result);
                     if (result != null) {
-
+                        $('#payment-process-status').html('');
                         for (var i = 0; i < result.length; i++) {
                             $('#payment-process-status').append('<p class="text-success">' + result[i].text + '</p>');
                         }
